# kaist_dataset

./: CMakeLists.txt  README.md  test_kaist.cpp
data/23/: global_pose.csv
data/23/calibration/: EncoderParameter.txt  Vehicle2BackSick.txt  Vehicle2LeftVLP.txt  Vehicle2MiddleSick.txt  Vehicle2RightVLP.txt  Vehicle2Stereo.txt
data/23/sensor_data/: altimeter.csv  encoder.csv  gps.csv  vrs_gps.csv
include/: data_type.h  dataset_kaist.h
src/: dataset_kaist.cpp
